fix: fix layout inconsistency on smaller screens

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -81,7 +81,7 @@
     .grid-category-squares {
       grid-template-columns: 1fr 1fr;
       grid-template-rows: 1fr 1fr;
-      place-items: center;
+      
     }
     .items-line-img {
       width: 40vw;
